14.jul (ws)
      - fix mouse wheel handling for mixer elements
======================================
12.jul (ws)
      - fix #6453: File containing a horizontal frame directly before a bar with a line break cannot be opened
        (la)
      - fix ove charset preferences init (patch by Van Ferry)
10.jul (la)
      - fix #5949 again
      - fix : adding notes on voice > 0 from plugin framework
9.jul (ws)
      - fix #6425: Crash loading score with breath mark selected
5.jul  (la)
      - fix #6388: Crash on importing a MusicXML file (beam problem)
3.jul  (ws)
      - fix #5162: Artefacts in "Strings CLP" sound
      - fix #6093
2.jul  (ws)
      - attempt to fix #6093
      (la)
      - fix #6335: Crash on creating triplet on a chord
1.jul  (la)
      - fix #6318: MusicXML export of syllabic is broken
      - no empty tab if user tries to open a file with unknown extension
30.jun (ws)
      - fix #6289: crash on loading score where a key signature is selected
      - fix layout of fermata if in staff > 1
29.jun (la)
      - fix #6264: Chordnames not transposed on copy-paste or concert pitch
      - fix #6283: R key does not work as expected in drum staff
28.jun (ws)
      - free memory after removing score (#6164)
27.jun (la)
      - fix #6254: Concert pitch lossy transposition (Patch by Aaron Epstein)
      - fix #6275: Remove the last inserted vertical frame make musecore hangs
26.jun (la)
      - fix #6245: Underscores in Lyrics are not copied badly/not at all
      - Page numbers are no more editable in the score since formatting does not stick
      - fix #5906: Tick value shown in Object Inspector limited to 999999
      - fix #6253: High CPU usage when idle if reverb is on
25.jun (ws)
      - fix regression introduced in fixing #6138
      - fix #5903: Duration arithmentic with longa and brevis
       (la)
      - fix #6079: problem in multimeasure rests with 2 staves score
24.jun (ws)
      - fix #6138: crash on creating new score (after some steps)