@@ -1,4 +1,4 @@
-VERSION=0.9.6.1
+VERSION=0.9.6.2
 APPNAME=mscore
 LONG_NAME=MuseScore
 
