@@ -1,6 +1,10 @@
+4.aug (la)
+      - fix #6597: Close/reload crash on XP
+      - fix #6624: Crash when deleting a tuplet from a MusicXML import
+      - fix cursor move on repeatmeasure in plugin framework
 14.jul (ws)
       - fix mouse wheel handling for mixer elements
-======================================
+======== MuseScore 0.9.6.2 released ==============
 12.jul (ws)
       - fix #6453: File containing a horizontal frame directly before a bar with a line break cannot be opened
         (la)
